--- a/editor/templates/editor.html
+++ b/editor/templates/editor.html
@@ -156,6 +156,7 @@
 
     $('li.file').live('mouseenter mouseleave', function(event) {
         if(event.type == 'mouseenter') {
+            $(this).children("a").css("background", "#414243");
             $(this).children('img').css('visibility', 'visible');
             $(this).children('img').click(function() {
                 $.post('/editor/delete_template', { filename: $(this).siblings('a').text() });
@@ -163,6 +164,7 @@
                 editor.setValue("File deleted.");
             });
         } else {
+            $(this).children("a").css("background", "#0A001F");
             $(this).children('img').css('visibility', 'hidden');
         }
     });
