--- a/editor/templates/monitor.html
+++ b/editor/templates/monitor.html
@@ -13,6 +13,7 @@
         <div class="rascalcontent">
             <a href="/editor/"><img id="rascallogo" src="/editor/static/rm-logo-words-only-light.png"></a>
             <ul id="nav">
+                <li><a href="/editor/">editor</a> | </li>
                 <li><a href="/editor/log">log</a> | </li>
                 <li><a href="/editor/config">config</a> | </li>
                 <li><a href="/editor/monitor">monitor</a></li>
