Clean up quoting, a few URLs and page titles

--- a/editor/templates/auth.html
+++ b/editor/templates/auth.html
@@ -1,10 +1,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Rascal demo</title>
+    <title>Log in</title>
     <link rel="shortcut icon" href="/editor/static/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="/editor/static/style.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo'">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
 
     <script src="http://code.jquery.com/jquery-1.5.js"></script>
 </head>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <script>
-        $(".flash").delay(5000).fadeOut('slow');
+        $(".flash").delay(5000).fadeOut("slow");
     </script>
 </body>
 </html>
