--- a/editor/templates/reauth.html
+++ b/editor/templates/reauth.html
@@ -1,6 +1,5 @@
-
 <!doctype html>
-<title>Login Demo</title>
+<title>Reauthentication</title>
 <link rel="stylesheet" type="text/css" href="/editor/static/style.css">
 
 <div class=page>
