--- a/editor/templates/monitor.html
+++ b/editor/templates/monitor.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" href="/editor/static/favicon.ico">
 
     <link rel="stylesheet" type="text/css" href="/editor/static/style.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo'">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
 
     <script src="http://code.jquery.com/jquery-1.5.js"></script>
 </head>
