--- a/public/templates/arduino.html
+++ b/public/templates/arduino.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
     <link rel="stylesheet" type="text/css" href="/static/demo.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
-    <script src="http://code.jquery.com/jquery-1.5.js"></script>
+    <script src="/static/jquery-1.5.js"></script>
 </head>
 <body>
     <div class="rascalcontent">
