--- a/public/templates/lcd.html
+++ b/public/templates/lcd.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <title>LCD demo</title>
     <link rel="stylesheet" type="text/css" href="/static/demo.css">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    <script src="{{ url_for('static', filename='jquery-1.5.js') }}"></script>
+    <link rel="shortcut icon" href="/static/favicon.ico">
+    <script src="/static/jquery-1.5.js"></script>
 </head>
 <body>
     <div class="rascalcontent">
         <h1><a href="/lcd.html">LCD demo</a></h1>
         <form id="serial_form" method="POST" action="lcd.html" style="float:left">
             <label for="serial_text">Enter some text to send to the LCD display</label><br />
-            <textarea rows="2" cols="16" id="serial_text" name="serial_text" type="textarea" style="border:10px;border-color:#E7E8E9;border-style:solid;margin-top:10px;margin-bottom:10px;font-family:'VT323', 'Courier', sans-serif;font-size:100px;background-color:#111111;color:#A4211A"></textarea><br />
+            <textarea rows="2" cols="16" id="serial_text" name="serial_text" type="textarea" style="border:10px;border-color:#E7E8E9;border-style:solid;margin-top:10px;margin-bottom:10px;font-family:"VT323", "Courier", sans-serif;font-size:100px;background-color:#111111;color:#A4211A"></textarea><br />
             <button type="submit" class="large blue awesome" alt="Send to LCD" style="margin-left:590px">
                 Send to LCD
             </button>
