--- a/public/templates/relay.html
+++ b/public/templates/relay.html
@@ -17,7 +17,7 @@
         <form id="relay-form">
             <label for="target_state">Toggle relay to charge and discharge capacitor:</label>
             <select id="target_state">
-                {% if pin == '1' %}
+                {% if pin == "1" %}
                 <option value="0">Off</option>
                 <option value="1" selected="selected">On</option>
                 {% else %}
@@ -29,29 +29,29 @@
         <div id="chart1" style="height:600px;width:900px;"></div>
     </div>
     <script language="javascript" type="text/javascript">
-    $('#target_state').change(function() {
+    $("#target_state").change(function() {
         $.post("toggle", "target_state=" + $("#target_state").val());
     });
 
     chartOptions = {
         legend: {
             show: true,
-            location: 'nw' },
-        title: 'Rascal voltage readings',
+            location: "nw" },
+        title: "Rascal voltage readings",
         series: [
-            {label: 'Channel 0 (relay)', lineWidth:3, showMarker:false},
-            {label: 'Channel 1 (capacitor)', lineWidth:3, showMarker:false},
-            {label: 'Channel 2', lineWidth:3, showMarker:false},
-            {label: 'Channel 3', lineWidth:3, showMarker:false}
+            {label: "Channel 0 (relay)", lineWidth:3, showMarker:false},
+            {label: "Channel 1 (capacitor)", lineWidth:3, showMarker:false},
+            {label: "Channel 2", lineWidth:3, showMarker:false},
+            {label: "Channel 3", lineWidth:3, showMarker:false}
         ],
         axes: {
             xaxis: {
-                label: 'Time [seconds ago]',
+                label: "Time [seconds ago]",
                 min: 0,
                 max: 120,
                 pad: 0 },
             yaxis: {
-                label: 'Voltage [V]',
+                label: "Voltage [V]",
                 min: 0,
                 max: 4.0 },
         },
