Make graph labels legible

--- a/public/static/demo.css
+++ b/public/static/demo.css
@@ -135,6 +135,10 @@ tr.over td {
     color: #00ff00;
 }
 
+.jqplot-axis {
+    color: #fff;
+}
+
 /* Zurb awesome buttons */
 .awesome, .awesome:visited {
     display: inline-block;
