Improve demo pages

--- a/public/templates/lcd.html
+++ b/public/templates/lcd.html
@@ -10,18 +10,18 @@
 <body>
     <div class="rascalcontent">
         <h1><a href="/lcd.html">LCD demo</a></h1>
-        <form id="serial_form" method="POST" action="lcd.html" style="float:left">
-            <label for="serial_text">Enter some text to send to the LCD display</label><br />
-            <textarea rows="2" cols="16" id="serial_text" name="serial_text" type="textarea" style="border:10px;border-color:#E7E8E9;border-style:solid;margin-top:10px;margin-bottom:10px;font-family:'VT323', 'Courier', sans-serif;font-size:100px;background-color:#111111;color:#A4211A"></textarea><br />
-            <button type="submit" class="large blue awesome" alt="Send to LCD" style="margin-left:590px">
-                Send to LCD
-            </button>
-        </form>
-        <form id="clear" method="POST" action="clear" style="position:absolute;margin-top:292px">
-            <button type="submit" class="large red awesome" alt="Clear LCD">
-                Clear LCD
-            </button>
-        </form>
+        <p>Enter some text to send to the LCD display</p><br />
+        <textarea rows="2" cols="16" id="serial_text" name="serial_text" type="textarea" style="border:10px;border-color:#E7E8E9;border-style:solid;margin-top:10px;margin-bottom:10px;font-family:'VT323', 'Courier', sans-serif;font-size:100px;background-color:#111111;color:#A4211A"></textarea><br />
+        <input id="send-to-lcd" type="button" value="Send to LCD" class="large blue awesome" alt="Send to LCD" style="margin-left:590px">
+        <input id="clear-lcd" type="button" value="Clear LCD" class="large red awesome" alt="ON">
     </div>
+    <script language="javascript" type="text/javascript">
+    $("#send-to-lcd").click( function() {
+        $.post("/send-to-lcd", { serial_text: $("#serial_text").val() });
+    });
+    $("#clear-lcd").click( function() {
+        $.post("/clear-lcd");
+    });
+    </script>
 </body>
 </html>
