Point to local copy of jQuery

--- a/editor/templates/log.html
+++ b/editor/templates/log.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/editor/static/style.css">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
 
-    <script src="http://code.jquery.com/jquery-1.5.js"></script>
+    <script src="/editor/static/jquery-1.5.js"></script>
 </head>
 <body>
     <div id="topbar">
