--- a/public/static/demo.css
+++ b/public/static/demo.css
@@ -214,3 +214,12 @@ tr.over td {
   src: url('VT323.ttf');
 }
 
+#serial-text {
+    border: 10px solid #E7E8E9;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: 'VT323', 'Courier', sans-serif;
+    font-size: 100px;
+    background-color: #111111;
+    color: #A4211A;
+}
