--- a/public/templates/thermostat.html
+++ b/public/templates/thermostat.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>TMP102 demo</title>
+    <title>DIY thermostat demo</title>
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
     <link rel="stylesheet" type="text/css" href="/static/demo.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="rascalcontent">
-        <h1>TMP102 demo</h1>
+        <h1>DIY thermostat demo</h1>
         <div id="chart1" style="height:500px;width:900px;"></div>
     </div>
     <script language="javascript" type="text/javascript">
