Clean up thermostat demo, disable timers, and add motor demo

--- a/public/templates/thermostat.html
+++ b/public/templates/thermostat.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="rascalcontent">
-        <h1>DIY thermostat demo</h1>
+        <h1>DIY thermostat demo for Dorkbot</h1>
         <div id="chart1" style="height:500px;width:900px;"></div>
     </div>
     <script language="javascript" type="text/javascript">
@@ -26,7 +26,7 @@
         series: [
             {label: "Channel 0", lineWidth:3, showMarker:false},
             {label: "Target", lineWidth:1, showMarker:false},
-            {label: "Channel 2", lineWidth:3, showMarker:false, fill: "true", fillAlpha: 0.5}
+            {label: "Heater status", lineWidth:3, showMarker:false, fill: "true", fillAlpha: 0.5}
         ],
         axes: {
             xaxis: {
