Add Arduino motor control example and fix timezone bug in thermostat demo

--- a/public/templates/motor.html
+++ b/public/templates/motor.html
@@ -15,9 +15,10 @@
 </head>
 <body>
     <div class="rascalcontent">
-        <h1>This is your new page.</h1>
-        <style>div.demo { padding: 10px !important; }</style>
-        <div class="demo"><div id="slider"></div></div>
+        <h1>Motor control demo</h1>
+
+            <div id="slider"></div>
+
     </div>
     <script language="javascript" type="text/javascript">
     $(function() {
