--- a/public/templates/thermostat.html
+++ b/public/templates/thermostat.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="rascalcontent">
-        <h1>DIY thermostat demo for Dorkbot</h1>
+        <h1>DIY thermostat demo</h1>
         <div id="chart1" style="height:500px;width:900px;"></div>
     </div>
     <script language="javascript" type="text/javascript">
@@ -21,25 +21,25 @@
     chartOptions = {
         legend: {
             show: true,
-            location: "nw" },
+            location: "se" },
         title: "Channel 0",
         series: [
-            {label: "Channel 0", lineWidth:3, showMarker:false},
-            {label: "Target", lineWidth:1, showMarker:false},
+            {label: "Actual temperature", lineWidth:3, showMarker:false},
+            {label: "Target temperature", lineWidth:3, showMarker:false},
             {label: "Heater status", lineWidth:3, showMarker:false, fill: "true", fillAlpha: 0.5}
         ],
         axes: {
             xaxis: {
                 label: "Time [seconds ago]",
                 min: 0,
-                max: 120,
+                max: 300,
                 pad: 0 },
             yaxis: {
                 label: "Temperature [F]",
-                min: 50.0,
-                max: 90.0 },
+                min: 60.0,
+                max: 95.0 },
         },
-        seriesColors: [ "#CD2820", "#414243", "#CD2820" ]
+        seriesColors: [ "#414243", "#08C239", "#CD2820" ]
     };
 
     a0 = new Array();
