--- a/public/templates/blinkm.html
+++ b/public/templates/blinkm.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,14 +20,15 @@
 	    <span id="colorPicker2Span" style="float:left; border:1px solid black; width:20px; height:20px;margin:5px;"></span>
             <span id="text2" style="">Click anywhere in the box.</span>			
         </div>
-	<script type="text/javascript">
-	$(function(){
-            $("#colorPicker2").mlColorPicker({'onChange': function(val){
-                $("#colorPicker2Span").css("background-color", "#" + val);
-                $("#text2").text("#" + val);
-                $.post("set-color", "color=" + val);
-            }});
-	});
-	</script>
+    </div>
+    <script type="text/javascript">
+    $(function(){
+        $("#colorPicker2").mlColorPicker({'onChange': function(val){
+            $("#colorPicker2Span").css("background-color", "#" + val);
+            $("#text2").text("#" + val);
+            $.post("set-color", "color=" + val);
+        }});
+    });
+    </script>
 </body>
 </html>
