Minor changes to thermostat, new Color Kinetics demo

--- a/public/templates/ck.html
+++ b/public/templates/ck.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <div class="rascalcontent">
-        <h1>BlinkM LED color demo</h1>
-        <div id="colorPicker2"style="padding:10px;clear:both;border:1px solid black;vertical-align:middle;">
-	    <span id="colorPicker2Span" style="float:left; border:1px solid black; width:20px; height:20px;margin:5px;"></span>
+        <h1>Color Kinetics demo</h1>
+        <div id="colorPicker2"style="padding:10px;clear:both;vertical-align:middle;">
+	    <span id="colorPicker2Span" style="float:left; border:1px solid black; width:100px; height:100px;margin:5px;"></span>
             <span id="text2" style="">Click anywhere in the box.</span>			
         </div>
     </div>
