--- a/editor/static/style.css
+++ b/editor/static/style.css
@@ -135,6 +135,10 @@ input {
     width: 340px;
 }
 
+#new-folder {
+    float: right;
+}
+
 #overlay {
      visibility: hidden;
      position: absolute;
@@ -292,20 +296,20 @@ tr.over td {
   font-family: 'DroidSans';
   font-style: normal;
   font-weight: normal;
-  src: url('DroidSans.ttf');
+  src: url('fonts/DroidSans.ttf');
 }
 
 @font-face {
   font-family: 'Molengo';
   font-style: normal;
   font-weight: normal;
-  src: url('Molengo-Regular.ttf');
+  src: url('fonts/Molengo-Regular.ttf');
 }
 
 @font-face {
   font-family: 'VT323';
   font-style: normal;
   font-weight: normal;
-  src: url('VT323.ttf');
+  src: url('fonts/VT323.ttf');
 }
 
