--- a/editor/templates/editor.html
+++ b/editor/templates/editor.html
@@ -3,11 +3,11 @@
     <title>Editor</title>
     <link rel="shortcut icon" href="/editor/static/favicon.ico">
 
-    <link rel="stylesheet" type="text/css" href="/editor/static/style.css">
+    <link rel="stylesheet" type="text/css" href="/editor/static/editor.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/codemirror2/lib/codemirror.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/codemirror2/theme/default.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/codemirror2/theme/night.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo"> -->
     <link rel="stylesheet" type="text/css" href="/editor/static/jquery.filetree.css">
 
     <script src="/editor/static/codemirror2/lib/codemirror.js"></script>
@@ -18,11 +18,12 @@
     <script src="/editor/static/codemirror2/mode/xml/xml.js"></script>
     <script src="/editor/static/jquery-1.5.js"></script>
     <script src="/editor/static/jquery.filetree.js"></script>
+    <script src="/editor/static/rascal-1.02.js"></script>
 </head>
 <body>
     <div id="topbar">
         <div class="rascalcontent">
-            <a href="/editor/"><img id="rascallogo" src="/editor/static/rm-logo-words-only-light.png"></a>
+            <a href="/editor/"><img id="rascallogo" src="/editor/static/images/rm-logo-words-only-light.png"></a>
             <ul id="nav">
                 <li><a href="/editor/">editor</a> | </li>
                 <li><a href="/editor/log">log</a> | </li>
@@ -47,9 +48,7 @@
         <div id="editor">
             <form>
                 <input id="path" type="hidden" name="path" value="{{ path }}">
-                <div id="location-bar">
-                    &nbsp;<a></a>
-                </div>
+                <div id="location-bar">&nbsp;</div>
                 <div id="textfield">
                     <textarea id="code" cols="100" rows="120" name="text">{{text_to_edit}}</textarea>
                 </div>
@@ -59,118 +58,38 @@
             <div id="filetree" class="cm-s-night"></div>
         </div>
         <div id="new-file-folder-bar">
-            <img id="new-template" src="/editor/static/oxygen-new-file-32x32.png">
+            <img id="new-template" src="/editor/static/images/oxygen-new-file-32x32.png" />
+            <img id="new-folder" src="/editor/static/images/oxygen-new-folder-32x32.png" />
         </div>
-        <div id="overlay">
+        <div id="overlay-t">OVERLAY TEMPLATE
             <div id="new-template-dialog">
                 Create a new template<br />
                 <div class="small">The name you type should end in .html</div>
-                <form method="POST" action="/editor/new_template">
-                    <fieldset>
-                        <input type="text" name="template-name" id="template-name"/><br />
-                        <input id="create-template" type="submit" value="Create" class="large red awesome" alt="Create">
-                        <input id="cancel-template" type="button" value="Cancel" class="large red awesome" alt="Cancel">
-                    </fieldset>
-                </form>
+                <fieldset>
+                    <input id="template-name" type="text" name="template-name" /><br />
+                    <input id="create-template" type="button" value="Create" class="large red awesome" alt="Create" />
+                    <input id="cancel-template" type="button" value="Cancel" class="large red awesome" alt="Cancel" />
+                </fieldset>
+            </div>
+        </div>
+        <div id="overlay-f">OVERLAY FOLDER
+            <div id="new-folder-dialog">
+                Create a new folder in "static"<br />
+                <div id="folder-message" class="small">You will be able to drag it to another folder</div>
+                <fieldset>
+                    <input id="folder-name" type="text" name="folder-name" /><br />
+                    <input id="create-folder" type="button" value="Create" class="large red awesome" alt="Create" />
+                    <input id="cancel-folder" type="button" value="Cancel" class="large red awesome" alt="Cancel" />
+                </fieldset>
             </div>
         </div>
     </div>
+    <script src="/editor/static/editor.js"></script>
     <script type="text/javascript">
-    var editor = CodeMirror.fromTextArea(document.getElementById("code"), {
-        mode: "text", // text mode doesn't exist explicitly, but setting it provokes plain text by default
-        tabSize: 4,
-        indentUnit: 4,
-        enterMode: "keep",
-        electricChars: false,
-        lineWrapping: true,
-        theme: "night"
-    });
-
-    function pickMode(ext) {
-        switch(ext.toLowerCase()) {
-            case "css":
-                return "css";
-            case "js":
-                return "javascript";
-            case "py":
-                return "python";
-            default:
-                return "htmlmixed";
-        }
-    }
-
-    function saveFile() {
-        $.post("/editor/save", { path: $("#path").val(), text: editor.getValue() });
-        $("#save-progress").css("background-position", "-120px");
-        $("#save-progress").animate({ "background-position": 0 }, 1000, function() {
-            $("#save-message").css("visibility","visible").hide().fadeTo(500, 1).fadeTo(2000, 0);
+        $(document).ready(function () {
+            initRascalDnd ();
+            displayTree('/var/www/public/templates/');
         });
-    }
-
-    // Function for binding ctrl keystrokes from Ganeshji Marwaha:
-    // http://www.gmarwaha.com/blog/2009/06/16/ctrl-key-combination-simple-jquery-plugin/
-    $.ctrl = function(key, callback, args) {
-        $(document).keydown(function(e) {
-            if(!args) args=[]; // IE barks when args is null
-            if(e.keyCode == key.charCodeAt(0) && e.ctrlKey) {
-                callback.apply(this, args);
-                return false;
-            }
-        });
-    };
-
-    $(document).ready( function() {
-        $("#filetree").fileTree({ root: "/var/www/public/", script: "/editor/get_dirlist", multiFolder: false }, function(path) {
-            $.post("/editor/read", "path=" + path.split("/var/www/public/").pop(), function(response) {
-                editor.setValue(response);
-                editor.setOption("mode", pickMode(path.split(".").pop()));
-                $("#location-bar").children("a").text(path.split("/var/www/public/").pop());
-                if (path.split("/var/www/public/")[1].match(/templates/)) { // hack to fix template links. could be improved.
-                    $("#location-bar").children("a").attr("href", path.split("/var/www/public/templates").pop());
-                }
-                $("#path").val(path.split("/var/www/public/").pop());
-            });
-        });
-    });
-
-    $("#reload").click( function() {
-        $.post("/editor/reload", "text");
-        $("#reload-progress").css("background-position", "-120px");
-        $("#reload-progress").animate({ "background-position": 0 }, 10000);
-    });
-
-    $.ctrl("S", function() {
-        saveFile();
-    });
-
-    $( "#save" ).click(function() {
-        saveFile();
-    });
-
-    $( "#new-template" ).click(function() {
-        $( "#overlay" ).css("visibility", "visible");
-        $( "#template-name" ).focus();
-    });
-
-    $( "#cancel-template" ).click(function() {
-        $( "#overlay" ).css("visibility", "hidden");
-    });
-
-    $("li.file").live("mouseenter mouseleave", function(event) {
-        if(event.type == "mouseenter") {
-            $(this).children("a").css("background", "#414243");
-            $(this).children("img").css("visibility", "visible");
-            $(this).children("img").click(function() {
-                $.post("/editor/delete_template", { filename: $(this).siblings("a").text() });
-                $(this).parent().hide("slow");
-                editor.setValue("File deleted.");
-            });
-        } else {
-            $(this).children("a").css("background", "#0A001F");
-            $(this).children("img").css("visibility", "hidden");
-        }
-    });
-
     </script>
 </body>
 </html>
