Comment out ref to external fonts

--- a/public/templates/fonts.html
+++ b/public/templates/fonts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Rascal Font Book</title>
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo">
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo"> -->
     <link rel="stylesheet" type="text/css" href="/static/demo.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
     <style>
