Removed link to googleapis from fonts.html

--- a/public/templates/fonts.html
+++ b/public/templates/fonts.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Rascal Font Book</title>
-    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans|Molengo"> -->
     <link rel="stylesheet" type="text/css" href="/static/demo.css">
     <link rel="shortcut icon" href="/static/favicon.ico">
     <style>
-        #molengo { font-family: "Molengo","URW Gothic L",sans-serif; }
+        #molengo { font-family: "Molengo",sans-serif; }
         #urw { font-family: "URW Gothic L",sans-serif; }
         #ds { font-family: "DroidSans",sans-serif; }
         #dsb { font-family: "DroidSans-Bold",sans-serif; }
