Initial version of changed file dialog

--- a/editor/templates/editor-cm.html
+++ b/editor/templates/editor-cm.html
@@ -110,7 +110,16 @@
             <input id="cancel-prefs" type="button" value="OK" class="large red awesome" alt="Cancel" />
         </div>
     </div>
-
+    <div id="overlay-s" class="overlay">OVERLAY SAVE
+        <div id="save-file-dialog" class="dialog">
+            Save file<br />
+            <div id="save-file-message" class="small">&nbsp;</div>
+            <fieldset>
+                <input id="save-no" type="button" value="Don't Save" class="large blue awesome" alt="Don't Save" />
+                <input id="save-yes" type="button" value="Save..." class="large red awesome" alt="Save" />
+            </fieldset>
+        </div>
+    </div>
 
     <script src="/editor/static/editor-resize.js"></script>
     <script src="/editor/static/editor-cm.js"></script>
