--- a/editor/templates/editor-cm.html
+++ b/editor/templates/editor-cm.html
@@ -82,7 +82,7 @@
             <fieldset>
                 <input id="template-name" type="text" name="template-name" /><br />
                 <input id="create-template" type="button" value="Create" class="large red awesome" alt="Create" />
-                <input id="cancel-template" type="button" value="Cancel" class="large red awesome" alt="Cancel" />
+                <input id="cancel-template" type="button" value="Cancel" class="large blue awesome" alt="Cancel" />
             </fieldset>
         </div>
     </div>
@@ -93,7 +93,7 @@
             <fieldset>
                 <input id="folder-name" type="text" name="folder-name" /><br />
                 <input id="create-folder" type="button" value="Create" class="large red awesome" alt="Create" />
-                <input id="cancel-folder" type="button" value="Cancel" class="large red awesome" alt="Cancel" />
+                <input id="cancel-folder" type="button" value="Cancel" class="large blue awesome" alt="Cancel" />
             </fieldset>
         </div>
     </div>
@@ -111,10 +111,11 @@
         </div>
     </div>
     <div id="overlay-s" class="overlay">OVERLAY SAVE
-        <div id="save-file-dialog" class="dialog">
+        <div id="save-file-dialog" class="dialog wide">
             Save file<br />
             <div id="save-file-message" class="small">&nbsp;</div>
             <fieldset>
+                <input id="save-cancel" type="button" value="Cancel" class="large blue awesome" alt="Cancel" />
                 <input id="save-no" type="button" value="Don't Save" class="large blue awesome" alt="Don't Save" />
                 <input id="save-yes" type="button" value="Save..." class="large red awesome" alt="Save" />
             </fieldset>
