Add deletion of any file or empty folder

--- a/editor/templates/editor-a.html
+++ b/editor/templates/editor-a.html
@@ -131,6 +131,16 @@
             </fieldset>
         </div>
     </div>
+    <div id="overlay-d" class="overlay">OVERLAY DELETE
+        <div id="delete-file-dialog" class="dialog">
+            Delete file or folder<br />
+            <div id="delete-file-message" class="small">&nbsp;</div>
+            <fieldset>
+                <input id="delete-cancel" type="button" value="Cancel" class="large blue awesome" alt="Cancel" />
+                <input id="delete-yes" type="button" value="Delete..." class="large red awesome" alt="Delete" />
+            </fieldset>
+        </div>
+    </div>
 
     <script src="/editor/static/editor-resize.js"></script>
     <script src="/editor/static/editor-a.js"></script>
