--- a/editor/templates/editor-cm.html
+++ b/editor/templates/editor-cm.html
@@ -89,7 +89,7 @@
     <div id="overlay-f" class="overlay">OVERLAY FOLDER
         <div id="new-folder-dialog" class="dialog">
             Create a new folder in "static"<br />
-            <div id="folder-message" class="small">You will be able to drag it to another folder</div>
+            <div id="folder-message" class="small">You will be able to drag it to another folder.</div>
             <fieldset>
                 <input id="folder-name" type="text" name="folder-name" /><br />
                 <input id="create-folder" type="button" value="Create" class="large red awesome" alt="Create" />
@@ -118,6 +118,16 @@
                 <input id="save-cancel" type="button" value="Cancel" class="large blue awesome" alt="Cancel" />
                 <input id="save-no" type="button" value="Don't Save" class="large blue awesome" alt="Don't Save" />
                 <input id="save-yes" type="button" value="Save..." class="large red awesome" alt="Save" />
+            </fieldset>
+        </div>
+    </div>
+    <div id="overlay-d" class="overlay">OVERLAY DELETE
+        <div id="delete-file-dialog" class="dialog">
+            Delete file or folder<br />
+            <div id="delete-file-message" class="small">&nbsp;</div>
+            <fieldset>
+                <input id="delete-cancel" type="button" value="Cancel" class="large blue awesome" alt="Cancel" />
+                <input id="delete-yes" type="button" value="Delete..." class="large red awesome" alt="Delete" />
             </fieldset>
         </div>
     </div>
