CodeMirror v2.24, editor delete any file, save and delete confirmation and minor bug fixes

--- a/public/templates/upload-cf.html
+++ b/public/templates/upload-cf.html
@@ -41,7 +41,7 @@
         
         <span id="fileinput">
             <input id="fakefile" type="button" value="Choose File" class="large red awesome" />
-            <input id="file" type="file" name="file" accept="image/*" multiple />
+            <input id="file" type="file" name="file" accept="image/*" multiple="multiple" />
         </span>
         <p id="progress" /> 
         <div id="status"></div>
