--- a/editor/templates/editor-cm.html
+++ b/editor/templates/editor-cm.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" type="text/css" href="/editor/static/codemirror2/lib/codemirror.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/codemirror2/theme/night.css">
+    <link rel="stylesheet" type="text/css" href="/editor/static/codemirror2/theme/blackboard.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/editor-all.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/editor.css">
     <link rel="stylesheet" type="text/css" href="/editor/static/jquery.filetree.css">
